kernel/headers/SnapPea.h

/**
 *  Note:  values of the SolutionType enum are stored as integers in
 *  the triangulation.doc file format.  Changing the order of the
 *  entries in the enum would therefore invalidate all previously stored
 *  triangulations.
 */

typedef enum
{
    not_attempted,          /**<  solution not attempted, or user cancelled                   */
    geometric_solution,     /**<  all positively oriented tetrahedra; not flat or degenerate  */
    nongeometric_solution,  /**<  positive volume, but some negatively oriented tetrahedra    */
    flat_solution,          /**<  all tetrahedra flat, but no shapes = {0, 1, infinity}       */
    degenerate_solution,    /**<  at least one tetrahedron has shape = {0, 1, infinity}       */
    other_solution,         /**<  volume <= 0, but not flat or degenerate                     */
    no_solution,            /**<  gluing equations could not be solved                        */
    externally_computed     /**<  tetrahedra shapes were inserted into the triangulation      */
} SolutionType;
typedef enum
{
    func_OK = 0,
    func_cancelled,
    func_failed,
    func_bad_input
} FuncResult;
typedef struct
{
    Real  real;
    Real  imag;
} Complex;
typedef char   Boolean;
/**
 *  The values of MatrixParity should not be changed.
 *  (They must correspond to the values in the parity[] table in tables.c.)
 */

typedef enum
{
    orientation_reversing = 0,
    orientation_preserving = 1,
    unknown_parity = -1
} MatrixParity;
/**
 *  SnapPea represents a Moebius transformation as a matrix
 *  in SL(2,C) plus a specification of whether the Moebius
 *  transformation is orientation_preserving or orientation_reversing.
 *
 *  If mt->parity is orientation_preserving, then mt->matrix is
 *  interpreted in the usual way as the Moebius transformation
 *
 *                      az + b
 *              f(z) = --------
 *                      cz + d
 *
 *
 *  If mt->parity is orientation_reversing, then mt->matrix is
 *  interpreted as a function of the complex conjugate z' ("z-bar")
 *
 *                      az' + b
 *              f(z) = ---------
 *                      cz' + d
 */

typedef Complex SL2CMatrix[2][2];
typedef struct
{
    SL2CMatrix      matrix;
    MatrixParity    parity;
} MoebiusTransformation;
/**
 *  Matrices in O(3,1) represent isometries in the Minkowski space
 *  model of hyperbolic 3-space.  The matrices are expressed relative
 *  to a coordinate system in which the metric is
 *
 *                          -1  0  0  0
 *                           0  1  0  0
 *                           0  0  1  0
 *                           0  0  0  1
 *
 *  That is, the first coordinate is timelike, and the remaining
 *  three are spacelike.  O(3,1) matrices represent both
 *  orientation_preserving and orientation_reversing isometries.
 */

typedef Real O31Matrix[4][4];
typedef enum
{
    oriented_manifold,
    nonorientable_manifold,
    unknown_orientability
} Orientability;
/*
 *  The following are "opaque typedefs".  They let the UI declare and
 *  pass pointers to Triangulations, IsometryLists, etc. without
 *  knowing what a Triangulation, IsometryList, etc. is.  The definitions
 *  of struct Triangulation, struct IsometryList, etc. are private to the
 *  kernel.  SymmetryLists and IsometryLists are represented by the same
 *  data structure because Symmetries are just Isometries from a manifold
 *  to itself.
 */

typedef struct Triangulation                Triangulation;
typedef struct IsometryList                 IsometryList;
typedef struct GroupPresentation            GroupPresentation;
/**<
 *  Returns TRUE iff all cusps are filled and the coefficients
 *  are relatively prime integers.
 */


/************************************************************************/
/*                                                                      */
/*                          fundamental_group.c                         */
/*                                                                      */
/************************************************************************/

extern GroupPresentation *fundamental_group(
                    Triangulation   *manifold,
                    Boolean         simplify_presentation,
                    Boolean         fillings_may_affect_generators,
                    Boolean         minimize_number_of_generators,
                    Boolean         try_hard_to_shorten_relators);
/**<
 *  Computes the an unsimplified fundamental group of the manifold, taking into
 *  account Dehn fillings, and returns a pointer to it.
 */

extern int fg_get_num_generators(GroupPresentation *group);
/**<
 *  Returns the number of generators in the GroupPresentation.
 */

extern int fg_get_num_orig_gens(GroupPresentation   *group);
/**<
 *  Says whether the underlying space is a manifold or orbifold,
 *  as opposed to some other generalized Dehn filling.
 */

extern FuncResult fg_word_to_matrix(
                    GroupPresentation       *group,
                    int                     *word,
                    O31Matrix               result_O31,
                    MoebiusTransformation   *result_Moebius);
/**<
 *  Converts an abstract word in the fundamental group to a matrix
 *  in the matrix representation.  The abstract word is given as a
 *  string of integers.  The integer 1 means the first generator,
 *  2 means the second, etc., while -1 is the inverse of the first
 *  generator, -2 is the inverse of the second, etc.  The integer 0
 *  indicates the end of the string.  The result is given both as
 *  an O31Matrix and a MoebiusTransformation.  Returns func_OK if
 *  successful, or func_bad_input if the input word is not valid.
 */

extern int fg_get_num_relations(GroupPresentation *group);
/**<
 *  Returns the number of relations in the GroupPresentation.
 */

extern int  *fg_get_relation(   GroupPresentation   *group,
                                int                 which_relation);
/**<
 *  Returns the specified relation (using 0-based indexing).
 *  It allocates the memory for it, so you should pass the pointer
 *  back to fg_free_relation() when you're done with it.
 *  Each relation is a string of integers.  The integer 1 means
 *  the first generator, 2 means the second, etc., while -1 is the
 *  inverse of the first generator, -2 is the inverse of the second, etc.
 *  The integer 0 indicates the end of the string.
 */

extern void fg_free_relation(int *relation);
/**<
 *  Returns the number of cusps of the underlying manifold.
 *  This *includes* the filled cusps.  So, for example, if you do (5,1)
 *  Dehn filling on the figure eight knot complement, you can see the
 *  words in the fundamental group corresponding to the (former!) cusp's
 *  meridian and longitude.
 */

/**
 *  Returns the word corresponding to a meridian or longitude, in the
 *  same format used by fg_get_relation() above.  They allocate the
 *  memory for the string of integers, so you should pass the pointer
 *  back to fg_free_relation() when you're done with it.  Meridians and
 *  longitudes are available whether the cusps are filled or not, as
 *  explained for fg_get_num_cusps() above.
 */
/** @{ */
extern int  *fg_get_meridian(   GroupPresentation   *group,
                                int                 which_cusp);
extern int  *fg_get_longitude(  GroupPresentation   *group,
                                int                 which_cusp);
/**<
 *  Returns a something describing how the current generators are
 *  expressed in terms of the geometric generators.  See
 *  fundamental_group.c for details.  Please free the word with
 *  fg_free_relation() when you're done.
 */


extern void free_group_presentation(GroupPresentation *group);
/**<
  Frees the memory pointed to by relation_matrix->relations.
 */

/************************************************************************/
/*                                                                      */
/*                      hyperbolic_structure.c                          */
/*                                                                      */
/************************************************************************/

extern SolutionType find_complete_hyperbolic_structure(Triangulation *manifold);
/**<
 *  Attempts to find a complete hyperbolic structure for the
 *  Triangulation *manifold.  Sets the solution_type[complete] member of
 *  *manifold to the type of solution found.  If this type is anything
 *  other than no_solution, stores the hyperbolic structure by setting
 *  the *shape[complete] field of each Tetrahedron in the Triangulation.  The
 *  solution is also stored as the initial filled solution, by setting the
 *  solution_type[filled] member of *manifold and the *shape[filled] fields
 *  of the Tetrahedra; the is_complete flag of each Cusp is set to TRUE.
 *
 *  The hyperbolic structure is computed using Newton's method, beginning
 *  with all tetrahedra regular.
 *
 *  Returns: the type of solution found.
 */

extern SolutionType do_Dehn_filling(Triangulation *manifold);
/**<
 *  If greater_than_or_equal == TRUE, returns the number of EdgeClasses
 *  whose order is greater than or equal to edge_class_order.
 *  If greater_than_or_equal == FALSE, returns the number of EdgeClasses
 *  whose order is exactly edge_class_order.
 */


/************************************************************************/
/*                                                                      */
/*                              isometry.c                              */
/*                                                                      */
/************************************************************************/

extern FuncResult compute_isometries(
                                Triangulation   *manifold0,
                                Triangulation   *manifold1,
                                Boolean         *are_isometric,
                                IsometryList    **isometry_list,
                                IsometryList    **isometry_list_of_links);
/**<
 *  If the UI lets the kernel allocate a TriangulationData structure
 *      (as in a call to triangulation_to_data()), then the UI should
 *      call free_triangulation_data() to release it.
 *  If the UI allocates its own TriangulationData structure (as in
 *      preparing for a call to data_to_triangulation()), then the UI
 *      should release the structure itself.
 */

extern void free_triangulation(Triangulation *manifold);
/**<
 *  If manifold != NULL, frees up the storage associated with a
 *      triangulation structure.
 *  If manifold == NULL, does nothing.
 */

extern void copy_triangulation(Triangulation *source, Triangulation **destination);